# baseball_nl2sql

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
output/: .gitignore  generated_queries.json
prompts/: prompt.txt  prompt_1s.txt  prompt_2s.txt  prompt_3s.txt  prompt_CoT.txt
prompts/context/: db_schema_descriptive.txt  db_schema_exact.txt
scripts/: plot_prompt_exp.py  prompt_comparison.sh  schema_parser.py
src/: eval.py  generate.py
