[project]
name = "dynatrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.62.0",
    "fire>=0.7.1",
    "openai>=1.101.0",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "sqlglot[rs]>=27.8.0",
    "tqdm>=4.67.1",
]
